# flaskCardPortfolioApp

./: .gitignore  README.md  manage.py  pyproject.toml
api/: __init__.py  config.py
api/v1/: database.py
api/v1/routes/: authorizations.py  user.py
api/v1/services/: auth.py  consts.py  forms.py  users.py
api/v1/static/: hello.css  helloScript.js
api/v1/templates/: authPage.html  createCard.html  loginPage.html  userPage.html
